--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,3 +6,16 @@
 .no-scroll {
     overflow: hidden;
 }
+
+.fade-out {
+    animation: fadeOut 3s forwards;
+  }
+  
+  @keyframes fadeOut {
+    0% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
